--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "javascript-development-environment",
   "version": "1.0.0",
   "description": "JavaScript development environment Pluralsight course by Cory House",
-  "scripts": {},
+  "scripts": {
+    "prestart": "node buildScripts/startMessage.js",
+    "open:src": "node buildScripts/srcServer.js",
+    "start": "npm-run-all --parallel open:src",
+    "localtunnel": "lt --port 3000",
+    "share": "npm-run-all --parallel open:src localtunnel"
+  },
   "author": "Svetlana Angelova",
   "license": "MIT",
   "dependencies": {
